--- a/D6/style.css
+++ b/D6/style.css
@@ -70,6 +70,7 @@ button {
 
 #footer, #shopAddress {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
