--- a/D6/style.css
+++ b/D6/style.css
@@ -6,6 +6,7 @@ body {
 
 main {
     padding: 2% 4%;
+    background: #dddddd;
 }
 
 header {
@@ -13,10 +14,13 @@ header {
     justify-content: center;
     align-items: center;
     height: 80px;
-    background: linear-gradient(0deg, rgba(185,185,185,1) 17%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(0deg, rgb(56, 149, 255) 17%, rgba(0,0,0,0) 100%);
+    background-color: rgb(229, 243, 255);
+    border-bottom: 2px solid rgb(60, 89, 255);
+    box-shadow: 0 4px 15px  rgb(56, 149, 255) ;
 
-    border-bottom: 2px solid gray;
-    box-shadow: 0 3px 15px rgb(160, 160, 160);
+    position: relative;
+    z-index: 2;
 }
 
 header h1 {
@@ -26,8 +30,8 @@ header h1 {
 
 .productContainer {
     width: 100%;
-    height: fit-content;
-    margin: 5% 0;
+    height: 220px;
+    margin: 8% 0;
 
     display: flex;
     justify-content: space-around;
@@ -41,7 +45,7 @@ header h1 {
 
 .imgContainer img {
     height: 100%;
-    max-height: 250px;
+    max-height: 220px;
     width: 100%;
     object-fit: cover;
     border-radius: 15px;
@@ -49,12 +53,13 @@ header h1 {
 
 .textContainer {
     width: 70%;
-    height: auto;
+    height: 100%;
+    max-height: 200px;
     padding: 1% 2%;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 button, h1 {
@@ -73,4 +78,9 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#footer {
+    border-top: 1px solid black;
+    background: rgb(231, 231, 231);
 }
